--- a/pages/blog/selendra-v2.en-US.mdx
+++ b/pages/blog/selendra-v2.en-US.mdx
@@ -1,22 +1,21 @@
 ---
 image: https://assets.vercel.com/image/upload/v1630059453/swr/v1.png
-description: 'Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.'
-date: August 27th, 2021
+description: 'Selendra 2.0 brings a multichain interoperable vision one more steps closers to mainstream users'
+date: July 30th, 2022
 ---
 
 import Callout from 'nextra-theme-docs/callout'
 import Bleed from 'nextra-theme-docs/bleed'
-
 import Authors, { Author } from 'components/authors'
 
-# Announcing SWR 1.0
+# Selendra 2.0
 
-<Authors date="August 27th, 2021">
-  <Author name="Shu Ding" link="https://twitter.com/shuding_" />
-  <Author name="Jiachi Liu" link="https://twitter.com/huozhi" />
+<Authors date="July 20th, 2022">
+  <Author name="Lay Nath" link="https://github.com/LayNath242" />
+  <Author name="Rithy Thul" link="https://github.com/rithythul" />
 </Authors>
 
-Almost 2 years ago we [open sourced](https://twitter.com/vercel/status/1188911002626097157) SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR!
+Selendra 2.0 comes with many new features added and ready to open for developers to join onboard.
 
 ## What’s New
 
