--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -1,5 +1,5 @@
 ---
-title: React Hooks for Data Fetching
+title: Multichain interoperable nPoS network
 ---
 
 import Callout from 'nextra-theme-docs/callout'
@@ -9,7 +9,7 @@ import Bleed from 'nextra-theme-docs/bleed'
 {
 // wrapped with {} to mark it as javascript so mdx will not put it under a p tag
 }
-{<h1 className="text-center font-extrabold md:text-5xl mt-8">SWR</h1>}
+{<h1 className="text-center font-extrabold md:text-5xl mt-8">Selendra Blockchain</h1>}
 
 <Bleed><Features/></Bleed>
 
