--- a/pages/blog/selendra-v2.en-US.mdx
+++ b/pages/blog/selendra-v2.en-US.mdx
@@ -9,7 +9,7 @@ import Bleed from 'nextra-theme-docs/bleed'
 
 import Authors, { Author } from 'components/authors'
 
-# Announcing SWR 1.0
+# Announcing from Selendra v2
 
 <Authors date="August 27th, 2021">
   <Author name="Shu Ding" link="https://twitter.com/shuding_" />
@@ -109,7 +109,7 @@ More information can be found [here](/docs/global-configuration#access-to-global
 
 ### Middleware
 
-SWR Middlewares provide a new way for you to build and reuse abstractions on top of SWR hooks:
+SWR Middleware provide a new way for you to build and reuse abstractions on top of SWR hooks:
 
 ```jsx
 <SWRConfig value={{ use: [...middleware] }}>
