--- a/pages/blog/selendra-v2.en-US.mdx
+++ b/pages/blog/selendra-v2.en-US.mdx
@@ -12,7 +12,7 @@ import Authors, { Author } from 'components/authors'
 # Announcing from Selendra v2
 
 <Authors date="August 27th, 2021">
-  <Author name="Shu Ding" link="https://twitter.com/shuding_" />
+  <Author name="Rithy Thul" link="https://github.com/rithythlgwitter.com/shuding_" />
   <Author name="Jiachi Liu" link="https://twitter.com/huozhi" />
 </Authors>
 
