--- a/pages/docs/getting-started.en-US.mdx
+++ b/pages/docs/getting-started.en-US.mdx
@@ -1,74 +1,13 @@
 import Callout from 'nextra-theme-docs/callout'
+
 import Link from 'next/link'
 
 # Getting Started
 
-## Installation
+<Callout emoji="💡">
+  Selendra is a multichains interoperable Nominated Proof-of-Stake network for developing and running Substrate-based and EVM compatible blockchain applications.
+</Callout>
 
-Inside your React project directory, run the following:
+SEL is the currency used for many things on Selendra Blockchain. It is mainly used as form of payment for transaction fees, propose and validate block on the Mainnet.
 
-```jsx
-yarn add swr
-```
-
-Or with npm:
-
-```plaintext
-npm install swr
-```
-
-## Quick Start
-
-## Make It Reusable
-Test test 
-
-## Example
-
-`user`:
-
-import { Welcome } from 'components/diagrams/welcome'
-
-<div className="mt-8">
-  <Welcome/>
-</div>
-
-Test
-```jsx {7-11,17,18,27}
-// page component
-
-function Page () {
-  const [user, setUser] = useState(null)
-
-  // fetch data
-  useEffect(() => {
-    fetch('/api/user')
-      .then(res => res.json())
-      .then(data => setUser(data))
-  }, [])
-
-  // global loading state
-  if (!user) return <Spinner/>
-
-  return <div>
-    <Navbar user={user} />
-    <Content user={user} />
-  </div>
-}
-
-// child components
-
-function Navbar ({ user }) {
-  return <div>
-    ...
-    <Avatar user={user} />
-  </div>
-}
-
-function Content ({ user }) {
-  return <h1>Welcome back, {user.name}</h1>
-}
-
-function Avatar ({ user }) {
-  return <img src={user.avatar} alt={user.name} />
-}
-```
+Since it has power to propose and validate blogs that will have many assets live on top, it could also be used as collateral in future DeFi platform, as payment earned for performing services or selling of real world good and much more.
