--- a/pages/blog/blog-1.en-US.mdx
+++ b/pages/blog/blog-1.en-US.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Selendra Network Introduction'
-description: 'Some description'
+description: 'Selendra is a multichains interoperable Nominated Proof-of-Stake network for developing and running Substrate-based and EVM compatible blockchain applications.'
 date: August 27th, 2021
 ---
 
