--- a/pages/dev/intro.en-US.mdx
+++ b/pages/dev/intro.en-US.mdx
@@ -4,5 +4,7 @@ import Link from 'next/link'
 # Welcome
 
 <Callout>
-Are you ready?
+Docs for developer is also ready soon!
 </Callout>
+
+In the meantime, please [explore docs](/docs/getting-started).
