--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -19,18 +19,25 @@ import Bleed from 'nextra-theme-docs/bleed'
   [GitHub Repository](https://github.com/selendra/selendra)
 </div>
 
-## Overview
-
 Selendra is a multichains interoperable `Nominated Proof-of-Stake` network for developing and running `Substrate-based` and `EVM compatible` blockchain applications.
 
-<Callout>
- <strong>scalable</strong> *  <strong>upgradable</strong> *  <strong>developable</strong> *  <strong>fast</strong> * <strong>low cost</strong>
-</Callout>
+<div className="mt-16 mb-20 text-center">
+  <Callout>
+  <strong>scalable</strong> *  <strong>upgradable</strong> *  <strong>developable</strong> *  <strong>fast</strong> * <strong>low cost</strong>
+  </Callout>
+</div>
 
 ## Features
 
+- On-chain tokens exchange
+- Multi-assets 
+- Multi-chain token utilities
+- Built-in Smart Contract (EVM & Wasm)
+- Bridge to EVM chains and Substrate-based networks
+- 1000+ TPS on one chain
+- Deflationary via fees burns
 
-And a lot [more](/docs/getting-started).
+And a lot [more on Docs](/docs/getting-started).
 
 ## Community
 
@@ -43,3 +50,13 @@ And a lot [more](/docs/getting-started).
 Selendra's growth and scale is depend on its community engagement and comtribution to both growing the community of users of Dapps and the network and much more. 
 
 Feel free to join the [discussions on GitHub](https://github.com/selendra/selendra/discussions)!
+
+## We love social too
+
+<div className="mt-16 mb-20 text-center">
+  [Telegram](https://t.me/selendrachainofficial) *
+   [Twitter](/blog/selendra-v1) * 
+  [Linked](https://www.linkedin.com/company/selendra) *
+  [Facebook](https://www.fb.com/selendrachain) *
+  [GitHub](https://github.com/selendra/selendra)
+</div>
