--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -1,5 +1,5 @@
 ---
-title: Mutlichain interoperable nPoS Network
+title: Mutlichain interoperable Nominated Proot-of-Stake system
 ---
 
 import Callout from 'nextra-theme-docs/callout'
@@ -19,7 +19,7 @@ import Bleed from 'nextra-theme-docs/bleed'
   [GitHub Repository](https://github.com/selendra/selendra)
 </div>
 
-Selendra is a multichains interoperable `Nominated Proof-of-Stake` network for developing and running `Substrate-based` and `EVM compatible` blockchain applications.
+Selendra is a multichains interoperable `Nominated Proof-of-Stake` system for developing and running `Substrate-based` and `EVM compatible` blockchain applications.
 
 <div className="mt-16 mb-20 text-center">
   <Callout>
