--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -19,15 +19,14 @@ import Bleed from 'nextra-theme-docs/bleed'
   [GitHub Repository](https://github.com/selendra/selendra)
 </div>
 
-Selendra is a multichains interoperable `Nominated Proof-of-Stake` system for developing and running `Substrate-based` and `EVM compatible` blockchain applications.
-
-<div className="mt-16 mb-20 text-center">
-  <Callout>
-  <strong>scalable</strong> *  <strong>upgradable</strong> *  <strong>developable</strong> *  <strong>fast</strong> * <strong>low cost</strong>
-  </Callout>
-</div>
+<Callout>
+  This is a live editing Documentation of Selendra 2.0. Come back for more! 
+  {/* <strong>scalable</strong> *  <strong>upgradable</strong> *  <strong>developable</strong> *  <strong>fast</strong> * <strong>low cost</strong> */}
+</Callout>
 
 ## Features
+
+Selendra is a **multichains** _interoperable_ `Nominated Proof-of-Stake` system for developing and running `Substrate-based` and `EVM compatible` blockchain applications.
 
 - On-chain tokens exchange
 - Multi-assets 
