update initial supply number

--- a/pages/docs/tokenomics.en-US.mdx
+++ b/pages/docs/tokenomics.en-US.mdx
@@ -13,19 +13,19 @@ Since it has power to propose and validate blogs that will have many assets live
 ### Token supply 
 | Supply                  | SEL                         |
 | ------------------------| ----------------------------| 
-| **Total supply**        | **527,626,784**             | 
-| **Max supply*****       | **3,141,592,654**           | 
+| **Initial supply**      | **527,922,923**             | 
+| **Max supply**          | **3,141,592,654**           | 
 
 ### Allocation 
 
-| Allocate                     | Token amount       |  
-|------------------------------|--------------------|
-| Seeds	                       | 15,357,667.00      |
-| Community IDO Offering       | 67,035,376.00      |
-| Early Adopters	           | 13,817,814.00      |
-| Bridge Liquidity/Parachain Crowdloan   | 200,000,000.00	    |
-| Foundation Governance	       |  200,000,000.00    |
-| Teams	                       | 31,415,926.54      |
+| Allocate                               | Token amount       |  
+|----------------------------------------|--------------------|
+| Seeds	                                 | 15,357,667.00      |
+| Community IDO Offering                 | 67,035,376.00      |
+| Early Adopters	                     | 14,113,953.94      |
+| Bridge Liquidity/Parachain Crowdloan   | 200,000,000.00	  |
+| Foundation Governance	                 | 200,000,000.00     |
+| Teams	                                 | 31,415,926.54      |
 
 ### Planks number
 ```js
@@ -35,12 +35,12 @@ Since it has power to propose and validate blogs that will have many assets live
 
 ### Inflation		
 
-New SEL tokens enter into circulation via inflation then distribute in a form of reward to validators and stakers for helping to secure and navigate the network. Inflation is set to be between 0.5% - 2.5% per year, with initial supply starting of 527,626,784 SEL.
+New SEL tokens enter into circulation via inflation then distribute in a form of reward to validators and stakers for helping to secure and navigate the network. Inflation is set to be between 0.25% - 2.5% per year, with initial supply starting of 527,922,923 SEL.
 
 ```bash
 - max:	    10,763,227	2.50%
 - average:	4,305,291	1.00%
-- min:	    2,152,645	0.50%
+- min:	    2,152,645	0.250%
 ```
 ### Deflation
 
@@ -58,7 +58,7 @@ Fees
 
 The Maximum supply of SEL token is set to be 3,141,592,654 SEL. 
 
-With an average inflation of 1.5% per year and the initial supply of 527,626,784 SEL, it will take 120 years to reach 3,145,998,227 SEL. 
+With an average inflation of 1.5% per year and the initial supply of 527,922,923 SEL, it will take 120 years to reach 3,145,998,227 SEL. 
 
 ### Fees 
 
