--- a/pages/blog/blog-1.km-KH.mdx
+++ b/pages/blog/blog-1.km-KH.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Selendra Network Introduction'
 description: 'Selendra is a multichains interoperable Nominated Proof-of-Stake network for developing and running Substrate-based and EVM compatible blockchain applications.'
-# date: August 27th, 2021
+date: August 27th, 2021
 ---
 
 import Callout from 'nextra-theme-docs/callout'
@@ -9,13 +9,15 @@ import Bleed from 'nextra-theme-docs/bleed'
 
 import Authors, { Author } from 'components/authors'
 
-# Selendra Network
+# បណ្តាញ Selendra
 
-<Authors>
-  <Author name="Rithy Thul" link="https://github.com/rithythul" /> 
+<Authors date="August 27th, 2021">
+  <Author name="Rithy Thul" link="https://github.com/rithythul" />
   <Author name="Nath Lay" link="https://github.com/selendra" />
 </Authors>
 
 <Callout>
-  We are ready soon! Thanks for your patient.
+  យើងត្រៀមរួចរាល់ក្នុងពេលឆាប់ៗនេះ! 
+  
+  សូមអរគុណចំពោះអ្នកជំងឺរបស់អ្នក។
 </Callout>
