--- a/pages/docs/learn/tokenomics.en-US.mdx
+++ b/pages/docs/learn/tokenomics.en-US.mdx
@@ -1,6 +1,7 @@
 import Callout from 'nextra-theme-docs/callout'
-
 import Link from 'next/link'
+
+import Authors, { Author } from 'components/authors'
 
 # Tokenomics 
 
@@ -78,3 +79,7 @@ SEL vs Companies Stock
 - Burn  = Buy back
 - Earn  = Fees generated
 ```
+
+<Authors>
+  <Author name="Selendra" link="https://github.com/selendra" />
+</Authors>
